--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "@izumifinance/iziswap_periphery",
-  "version": "1.0.1",
+  "name": "@duckswapfinance/duckswap_core",
   "keywords": [
-    "iZUMi",
-    "iziswap",
+    "DuckFinance",
+    "DuckSwap",
     "periphery"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/izumiFinance/iZiSwap-core"
+    "url": "git+https://github.com:DuckSwapFinance/DuckSwap-periphery.git"
   },
   "files": [
     "contracts/*.sol",
